Increased height to prevent side scrollbar

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -12,7 +12,7 @@ body {
 iframe.embedded-demo {
 	padding:0;
 	margin:0;
-	height:767px;
+	height:768px;
 	width:100%;
     overflow:scroll;
     border:0;
